fixed vertical spacing for CUID length input

--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ body.dark-mode select {
     align-items: stretch;
   }
   label[for="cuid-length-input"] input {
-    margin-top: 0.5em;
+    margin-top: 0;
     width: 100% !important;
     min-width: 0;
     box-sizing: border-box;
